songs dont load but it shows that it exists! thats improvement right? Also windows and ascii are the worst and i hate them

--- a/Assignment7/templates/playlist.html
+++ b/Assignment7/templates/playlist.html
@@ -3,7 +3,7 @@
 	<title>playlist</title>
 </head>
 <body>
-	<h2>CFSS Assignment #7 Playlists</h2>
+	<h2>Playlist</h2>
 	<table>
 		<tr align="left">
 			<th>songOrder</th>
@@ -11,17 +11,18 @@
 			<th>albumName</th>
 			<th>trackName</th>
 		</tr>
-
-		{% for songOrder, artistName, albumName, trackName in playlists %}
+		
+		{% for songOrder, artistName, albumName, trackName in songs %}
 
 		<tr>
-			<td>{{ songOrder}}</td>
-			<td>{{ artistName}} </td>
-			<td>{{ albumName}} </td>
-			<td>{{ trackName}} </td>
+			<td>{{songOrder}}</td>
+			<td>{{artistName}} </td>
+			<td>{{albumName}} </td>
+			<td>{{trackName}} </td>
 		</tr>
 
 		{% endfor %}
+		
 
 	</table>
 
