--- a/Assignment7/templates/playlists.html
+++ b/Assignment7/templates/playlists.html
@@ -3,7 +3,7 @@
 	<title>playlists</title>
 </head>
 <body>
-	<h2>CFSS Assignment #7 Playlists</h2>
+	<h2>Assignment #7 Playlists</h2>
 	<table>
 		<tr align="left">
 			<th>id</th>
