--- a/Assignment7/templates/playlist.html
+++ b/Assignment7/templates/playlist.html
@@ -12,15 +12,13 @@
 			<th>trackName</th>
 		</tr>
 		
-		{% for songOrder, artistName, albumName, trackName in songs %}
-
+		{% for plalistId, songOrder, artistName, albumName, trackName in songs %}
 		<tr>
-			<td>{{songOrder}}</td>
-			<td>{{artistName}} </td>
-			<td>{{albumName}} </td>
-			<td>{{trackName}} </td>
+			<td>{{ songOrder}}</td>
+			<td>{{ artistName}} </td>
+			<td>{{ albumName}} </td>
+			<td>{{ trackName}} </td>
 		</tr>
-
 		{% endfor %}
 		
 
