info_table is working for multiple

--- a/Assignment7/templates/playlist.html
+++ b/Assignment7/templates/playlist.html
@@ -12,7 +12,7 @@
 			<th>trackName</th>
 		</tr>
 		
-		{% for plalistId, songOrder, artistName, albumName, trackName in songs %}
+		{% for playlistId, songOrder, artistName, albumName, trackName in songs %}
 		<tr>
 			<td>{{ songOrder}}</td>
 			<td>{{ artistName}} </td>
